feat: add dashboard design flow
